fix: fixed issues with organization and users adding cards fix: updated codestyle to match sif feat: added stripe customer to both user and org and identity fix: fix identity not being unmarshaled feat: updated queries fix: updated docs fix: updated tests
