# docs/swagger.yaml
@@ -1837,82 +1837,82 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
   /payments/cards/{id}:
-    get:
-      summary: Get payment card by ID
-      description: Retrieves details of a specific payment card by its ID
-      tags:
-        - Payments
-      security:
-        - BearerAuth: []
-        - CookieAuth: []
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: UUID of the payment card
-          schema:
-            type: string
-            format: uuid
-      responses:
-        '302':
-          description: Card found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Card'
-        '400':
-          description: Bad request or card not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '401':
-          description: Unauthorized - user not authenticated
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-    put:
-      summary: Update payment card
-      description: Updates a specific payment card by its ID
-      tags:
-        - Payments
-      security:
-        - BearerAuth: []
-        - CookieAuth: []
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: UUID of the payment card
-          schema:
-            type: string
-            format: uuid
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AddCardForm'
-      responses:
-        '200':
-          description: Card updated successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Card'
-        '400':
-          description: Bad request or card not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '401':
-          description: Unauthorized - user not authenticated
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+    # get:
+    #   summary: Get payment card by ID
+    #   description: Retrieves details of a specific payment card by its ID
+    #   tags:
+    #     - Payments
+    #   security:
+    #     - BearerAuth: []
+    #     - CookieAuth: []
+    #   parameters:
+    #     - name: id
+    #       in: path
+    #       required: true
+    #       description: UUID of the payment card
+    #       schema:
+    #         type: string
+    #         format: uuid
+    #   responses:
+    #     '302':
+    #       description: Card found
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: '#/components/schemas/Card'
+    #     '400':
+    #       description: Bad request or card not found
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: '#/components/schemas/Error'
+    #     '401':
+    #       description: Unauthorized - user not authenticated
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: '#/components/schemas/Error'
+    # put:
+    #   summary: Update payment card
+    #   description: Updates a specific payment card by its ID
+    #   tags:
+    #     - Payments
+    #   security:
+    #     - BearerAuth: []
+    #     - CookieAuth: []
+    #   parameters:
+    #     - name: id
+    #       in: path
+    #       required: true
+    #       description: UUID of the payment card
+    #       schema:
+    #         type: string
+    #         format: uuid
+    #   requestBody:
+    #     required: true
+    #     content:
+    #       application/json:
+    #         schema:
+    #           $ref: '#/components/schemas/AddCardForm'
+    #   responses:
+    #     '200':
+    #       description: Card updated successfully
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: '#/components/schemas/Card'
+    #     '400':
+    #       description: Bad request or card not found
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: '#/components/schemas/Error'
+    #     '401':
+    #       description: Unauthorized - user not authenticated
+    #       content:
+    #         application/json:
+    #           schema:
+    #             $ref: '#/components/schemas/Error'
     delete:
       summary: Delete payment card
       description: Deletes a specific payment card by its ID
@@ -1958,7 +1958,7 @@ paths:
         - BearerAuth: []
         - CookieAuth: []
       responses:
-        '302':
+        '200':
           description: Wallets found
           content:
             application/json:
@@ -1996,17 +1996,18 @@ paths:
             schema:
               $ref: '#/components/schemas/AddWalletForm'
       responses:
-        '400':
-          description: Success or error
+        '200':
+          description: Wallet Added
           content:
             application/json:
               schema:
-                oneOf:
-                  - type: object
-                    properties:
-                      wallet:
-                        $ref: '#/components/schemas/Wallet'
-                  - $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/Wallet'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
         '401':
           description: Unauthorized - user not authenticated
           content:
