# src/apps/views/payments.go
@@ -7,182 +7,125 @@ import (
 	"socious-id/src/apps/auth"
 	"socious-id/src/apps/models"
 	"socious-id/src/apps/utils"
+	"socious-id/src/config"
 
 	"github.com/gin-gonic/gin"
-	"github.com/google/uuid"
-	database "github.com/socious-io/pkg_database"
-	"github.com/stripe/stripe-go/v82"
-	"github.com/stripe/stripe-go/v82/card"
-	"github.com/stripe/stripe-go/v82/customer"
-	"github.com/stripe/stripe-go/v82/paymentmethod"
-	"github.com/stripe/stripe-go/v82/paymentsource"
+	"github.com/stripe/stripe-go/v81"
 )
-
-func createCard(token string, email string) (*stripe.Customer, *stripe.PaymentSource, error) {
-	paymentMethod, err := paymentmethod.New(&stripe.PaymentMethodParams{
-		Type: stripe.String(stripe.PaymentMethodTypeCard),
-		Card: &stripe.PaymentMethodCardParams{
-			Token: stripe.String(token),
-		},
-	})
-	if err != nil {
-		return nil, nil, err
-	}
-
-	customer, err := customer.New(&stripe.CustomerParams{
-		Email:         stripe.String(email),
-		PaymentMethod: stripe.String(paymentMethod.ID),
-		InvoiceSettings: &stripe.CustomerInvoiceSettingsParams{
-			DefaultPaymentMethod: stripe.String(paymentMethod.ID),
-		},
-	})
-	if err != nil {
-		return nil, nil, err
-	}
-
-	paymentSource, err := paymentsource.New(&stripe.PaymentSourceParams{
-		Source: &stripe.PaymentSourceSourceParams{
-			Token: stripe.String(token),
-		},
-		Customer: stripe.String(customer.ID),
-	})
-	if err != nil {
-		return nil, nil, err
-	}
-
-	return customer, paymentSource, nil
-}
-
-func deleteCard(customerID string, cardID string) (*stripe.Card, error) {
-	result, err := card.Del(cardID, &stripe.CardParams{Customer: stripe.String(customerID)})
-	if err != nil {
-		return nil, err
-	}
-	return result, nil
-}
 
 func paymentsGroup(router *gin.Engine) {
 	g := router.Group("payments")
 
-	g.GET("cards", auth.LoginRequired(), paginate(), func(c *gin.Context) {
-		paginate := c.MustGet("paginate").(database.Paginate)
+	g.GET("cards", auth.LoginRequired(), func(c *gin.Context) {
+		// paginate := c.MustGet("paginate").(database.Paginate)
 		identity := c.MustGet("identity").(*models.Identity)
 
-		page, limit := c.MustGet("page"), c.MustGet("limit")
+		// page, limit := c.MustGet("page"), c.MustGet("limit")
+		fmt.Println("identity", identity)
+		stripeCustomerID := identity.Meta["stripe_customer_id"]
+		if stripeCustomerID == nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Customer ID has not been set on this identity"})
+			return
+		}
 
-		cards, total, err := models.GetCards(identity.ID, paginate)
+		fiatService := config.Config.Payment.Fiats[0]
+		paymentMethods, err := fiatService.FetchCards(stripeCustomerID.(string))
 		if err != nil {
 			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
 		}
 
 		c.JSON(http.StatusOK, gin.H{
-			"page":    page,
-			"limit":   limit,
-			"results": cards,
-			"total":   total,
+			"cards": paymentMethods,
 		})
-	})
-
-	g.GET("cards/:id", auth.LoginRequired(), func(c *gin.Context) {
-		identity := c.MustGet("identity").(*models.Identity)
-		id := uuid.MustParse(c.Param("id"))
-
-		card, err := models.GetCard(id, identity.ID)
-		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-			return
-		}
-
-		c.JSON(http.StatusFound, card)
 	})
 
 	g.POST("/cards", auth.LoginRequired(), func(c *gin.Context) {
 		identity := c.MustGet("identity").(*models.Identity)
 		ctx := c.MustGet("ctx").(context.Context)
 
-		form := new(AddCardForm)
-		if err := c.BindJSON(form); err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-			return
-		}
-
-		scustomer, scard, err := createCard(form.Token, identity.MetaMap["email"].(string))
-		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Errorf("failed to create card: %w", err)})
-			return
-		}
-
-		card := &models.Card{
-			IdentityID: identity.ID,
-			Customer:   scustomer.ID,
-			Card:       scard.ID,
-		}
-
-		if err := card.CreateCard(ctx); err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-			return
-		}
-
-		c.JSON(http.StatusOK, card)
-	})
-
-	g.PUT("/cards/:id", auth.LoginRequired(), func(c *gin.Context) {
-		identity := c.MustGet("identity").(*models.Identity)
-		ctx := c.MustGet("ctx").(context.Context)
-		id := c.MustGet("id").(uuid.UUID)
+		stripeCustomerID, email := identity.Meta["stripe_customer_id"], identity.Meta["email"].(string)
+		fiatService := config.Config.Payment.Fiats[0]
 
 		form := new(AddCardForm)
 		if err := c.BindJSON(form); err != nil {
-			c.JSON(http.StatusBadRequest, err.Error())
-			return
-		}
-
-		card, err := models.GetCard(id, identity.ID)
-		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Errorf("couldn't find the card to update: %w", err)})
-			return
-		}
-
-		scustomer, scard, err := createCard(form.Token, identity.MetaMap["email"].(string))
-		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Errorf("failed to create card: %w", err)})
-			return
-		}
-		card.Customer = scustomer.ID
-		card.Card = scard.ID
-
-		if err := card.UpdateCard(ctx); err != nil {
 			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
 		}
 
-		c.JSON(http.StatusOK, card)
+		var (
+			customer       *stripe.Customer
+			paymentMethod  *stripe.PaymentMethod
+			identityEntity interface{}
+			err            error
+		)
+		if form.Token == nil && stripeCustomerID == nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "payment source card could not be found"})
+			return
+		} else if stripeCustomerID == nil {
+			customer, err = fiatService.AddCustomer(email)
+			if err != nil {
+				c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+				return
+			}
+
+			switch identity.Type {
+			case models.IdentityTypeUsers:
+				identityEntity, err = models.GetUser(identity.ID)
+			case models.IdentityTypeOrganizations:
+				identityEntity, err = models.GetOrganization(identity.ID)
+			}
+			if err != nil {
+				c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+				return
+			}
+
+			switch v := identityEntity.(type) {
+			case *models.User:
+				v.StripeCustomerID = &customer.ID
+				err = v.UpdateProfile(ctx)
+			case *models.Organization:
+				v.StripeCustomerID = &customer.ID
+				err = v.Update(ctx)
+			}
+
+			if err != nil {
+				c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+				return
+			}
+		}
+
+		paymentMethod, err = fiatService.AttachPaymentMethod(customer.ID, *form.Token)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			return
+		}
+
+		c.JSON(http.StatusOK, gin.H{
+			"card":     paymentMethod,
+			"customer": customer,
+			"identity": identity,
+		})
 	})
 
 	g.DELETE("/cards/:id", auth.LoginRequired(), func(c *gin.Context) {
 		identity := c.MustGet("identity").(*models.Identity)
-		ctx := c.MustGet("ctx").(context.Context)
-		id := c.MustGet("id").(uuid.UUID)
+		id := c.MustGet("id").(string)
 
-		card, err := models.GetCard(id, identity.ID)
+		stripeCustomerID := identity.Meta["stripe_customer_id"]
+		if stripeCustomerID == nil {
+			c.JSON(http.StatusBadRequest, gin.H{"error": "Customer ID has not been set on this identity"})
+			return
+		}
+
+		fiatService := config.Config.Payment.Fiats[0]
+		err := fiatService.DeleteCard(id)
 		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Errorf("couldn't find the card to delete: %w", err)})
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
 		}
 
-		_, err = deleteCard(card.Customer, card.Card)
-		if err != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": fmt.Errorf("couldn't delete card: %w", err)})
-			return
-		}
-
-		if err := card.DeleteCard(ctx); err != nil {
-			c.JSON(http.StatusBadRequest, err.Error())
-			return
-		}
-
-		c.JSON(http.StatusBadRequest, gin.H{"message": "success"})
+		c.JSON(http.StatusOK, gin.H{"message": "success"})
 	})
 
 	g.GET("/wallets", auth.LoginRequired(), func(c *gin.Context) {
@@ -194,7 +137,7 @@ func paymentsGroup(router *gin.Engine) {
 			return
 		}
 
-		c.JSON(http.StatusFound, gin.H{"wallets": wallets})
+		c.JSON(http.StatusOK, wallets)
 	})
 
 	g.POST("/wallets", auth.LoginRequired(), func(c *gin.Context) {
@@ -216,6 +159,6 @@ func paymentsGroup(router *gin.Engine) {
 			return
 		}
 
-		c.JSON(http.StatusBadRequest, gin.H{"wallet": wallet})
+		c.JSON(http.StatusCreated, wallet)
 	})
 }
